<resources>
    <string name="app_name">LiberMovies</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="filter_by_year">Filter by Year</string>
    <string name="filter_by_relevance">Filter by Relevance</string>
    <string name="filter_movies_list">Filter movies list</string>
    <string name="filter_series_list">Filter series list</string>
    <string name="story">Story</string>
    <string name="cast">Cast</string>
    <string name="movie_is_missing">Movie is missing</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No Favorites</string>
</resources>
