<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kennedydias.libermovies.ui.movies.MoviesViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorScreenBackground"
            android:focusable="false">

            <TextView
                android:id="@+id/textViewLabelMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/movies"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toBottomOf="@+id/searchView" />

            <ImageView
                android:id="@+id/imageViewFilterMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/filter_movies_list"
                android:onClick="@{() -> viewModel.openMoviesFilter()}"
                android:src="@drawable/ic_more_vert"
                app:layout_constraintBottom_toBottomOf="@+id/textViewLabelMovie"
                app:layout_constraintEnd_toEndOf="@+id/textViewLabelMovie"
                app:layout_constraintTop_toTopOf="@+id/textViewLabelMovie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelMovie" />

            <TextView
                android:id="@+id/textViewLabelSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/series"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewMovies" />

            <ImageView
                android:id="@+id/imageViewFilterSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/filter_series_list"
                android:onClick="@{() -> viewModel.openSeriesFilter()}"
                android:src="@drawable/ic_more_vert"
                app:layout_constraintBottom_toBottomOf="@+id/textViewLabelSeries"
                app:layout_constraintEnd_toEndOf="@+id/textViewLabelSeries"
                app:layout_constraintTop_toTopOf="@+id/textViewLabelSeries" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelSeries" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutLoading"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorLoadingBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:background="@drawable/shape_rect_rounded_border"
                android:elevation="2dp"
                app:defaultQueryHint="@string/search"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="400dp"
                app:queryHint="Search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>